variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value nbpas
nbpas = 0
^Variables:2: error: not found: value dejaFAit
dejaFAit = 0
^Variables:4: error: not found: value nbpas
                         nbpas = nbpas +1}
                         ^Variables:6: error: not found: value dejaFait
while (dejaFait != nbpas) {recule()
       ^Variables:6: error: not found: value nbpas
while (dejaFait != nbpas) {recule()
                   ^Variables:7: error: not found: value dejaFait
                          dejaFait = dejaFait + 1}
                          ^