variables.Variables.scala.code
nbpas = 0
dejaFAit = 0
while (!estSurBiscuit()) { avance()
                         nbpas = nbpas +1}
prendBiscuit()
while (dejaFait != nbpas) {recule()
                          dejaFait = dejaFait + 1}
poseBiscuit()